objects/PSP_Status_Archieve__c.object
<CustomObject>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>PSP Status Archieves</relationshipLabel>
        <relationshipName>PSP_Status_Archieves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_Comments__c</fullName>
        <label>Overview Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <label>Who</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PSP Status Archieve</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSPStatus-{0000}</displayFormat>
        <label>PSP Status Archieve Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSP Status Archieves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>